[package]
name = "codectrl"
version = "0.5.0-nightly"
edition = "2021"
authors = [
  "Authentura <contact@authentura.com>",
  "Samuel Boyden <s.boyden@authentura.com>",
]
description = "A source code analytic tool. Using egui version 0.18."
license = "MIT"
rust-version = "1.64.0"
readme = "README.md"
homepage = "https://codectrl.authentura.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codectrl_gui = { path = "./codectrl-gui" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = "0.18"

[profile.release]
opt-level = "z"

[package.metadata.deb]
name = "codectrl"
maintainer = "Samuel Boyden <s.boyden@authentura.com>"
copyright = "2022, Authentura <contact@authentura.com>"
license-file = ["LICENSE", "4"]
assets = [
  ["target/release/codectrl", "usr/bin/", "755"],
  ["README.md", "usr/share/doc/codectrl/README", "644"]
]
depends = "libgtk-3-0"

[[package.metadata.generate-rpm.assets]]
source = "target/release/codectrl"
dest = "/usr/bin/codectrl"
mode = "755"

[[package.metadata.generate-rpm.assets]]
source = "README.md"
dest = "/usr/share/doc/codectrl/README"
mode = "644"
doc = true

[package.metadata.wix]
name = "CodeCTRL"
product-name = "CodeCTRL"
version = "0.5.0"
