[package]
name = "codectrl"
version = "1.0.0-beta"
edition = "2021"
authors = [
  "Authentura <contact@authentura.com>",
  "Samuel Boyden <s.boyden@authentura.com>",
]
description = "A dynamic source code analysis tool, made by Authentura."
license = "MIT"
rust-version = "1.62.0"
readme = "README.md"
homepage = "https://codectrl.authentura.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codectrl-gui = { path = "./codectrl-gui" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = "0.18"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"

[profile.release]
opt-level = "z"

[package.metadata.deb]
name = "codectrl"
maintainer = "Samuel Boyden <s.boyden@authentura.com>"
copyright = "2022, Authentura <contact@authentura.com>"
license-file = ["LICENSE", "4"]
assets = [
  [
    "target/release/codectrl",
    "usr/bin/",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/codectrl/README",
    "644",
  ],
]
depends = "libgtk-3-0"

[[package.metadata.generate-rpm.assets]]
source = "target/release/codectrl"
dest = "/usr/bin/codectrl"
mode = "755"

[[package.metadata.generate-rpm.assets]]
source = "README.md"
dest = "/usr/share/doc/codectrl/README"
mode = "644"
doc = true

[package.metadata.wix]
name = "CodeCTRL"
product-name = "CodeCTRL"
version = "1.0.0"
