[package]
name = "codectrl"
version = "1.0.0-beta"
edition = "2021"

[workspace]
members = [
  "crates/codectrl-gui",
  "crates/codectrl-server",
]

[workspace.package]
version = "1.0.0-beta"
edition = "2021"
authors = [
  "Authentura <contact@authentura.com>",
  "Samuel Boyden <s.boyden@authentura.com>",
]
description = "A dynamic source code analysis tool, made by Authentura."
license = "MIT"
rust-version = "1.70.0"
readme = "README.md"
homepage = "https://codectrl.authentura.com"

[workspace.dependencies]
anyhow = "1.0"
codectrl-protobuf-bindings = { git = "https://github.com/Authentura/codectrl-rust-protobuf-bindings", tag = "v0.8.3" }
parking_lot = "0.12.1"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"

[[bin]]
path = "crates/core/main.rs"
name = "codectrl"

[dependencies]
codectrl-gui = { path = "crates/codectrl-gui" }
codectrl-server = { path = "crates/codectrl-server" }

[package.metadata.deb]
name = "codectrl"
maintainer = "Samuel Boyden <s.boyden@authentura.com>"
copyright = "2022, Authentura <contact@authentura.com>"
license-file = ["LICENSE", "4"]
assets = [
  [
    "target/release/codectrl",
    "usr/bin/",
    "755",
  ],
  [
    "README.md",
    "usr/share/doc/codectrl/README",
    "644",
  ],
]
depends = "libgtk-3-0"

[[package.metadata.generate-rpm.assets]]
source = "target/release/codectrl"
dest = "/usr/bin/codectrl"
mode = "755"

[[package.metadata.generate-rpm.assets]]
source = "README.md"
dest = "/usr/share/doc/codectrl/README"
mode = "644"
doc = true

[package.metadata.wix]
name = "CodeCTRL"
product-name = "CodeCTRL"
version = "1.0.0"
