[package]
name = "codectrl_gui"
version = "0.5.0"
edition = "2021"
authors = [
    "Authentura <contact@authentura.com>",
    "Samuel Boyden <s.boyden@authentura.com>",
    "Sebestyen Morris <s.morris@authentura.com>",
    "Dasith Vidanage <d.vidanage@authentura.com>",
    "Balázs Cene (@bczsalba on Github) <bczsalba@gmail.com>",
    "Collin Joseph <c.joseph@authentura.com>"
]
description = "A source code analytic tool. Using egui version 0.18."
rust-version = "1.62.0"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
authentura-egui-styling = { git = "https://github.com/Authentura/authentura-egui-styling", rev = "51b23f1" }
ciborium = "0.2"
clap = { version = "3.1", features = ["cargo"] }
codectrl-protobuf-bindings = { git = "https://github.com/Authentura/codectrl-rust-protobuf-bindings", tag = "v0.5.0" }
codectrl_logger = { git = "https://github.com/authentura/codectrl-rust-logger", default-features = false, features = ["types-only"] }
eframe = { version = "0.18", features = ["persistence"] }
egui = { version = "0.18", features = ["persistence"] }
egui_extras = "0.18"
flate2 = "1.0"
lazy_static = "1.4"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
syntect = { version = "4.2", default-features = false, features = ["default-fancy"]}
xxhash-rust = { version = "0.8", features = ["xxh3"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", features = ["serde", "js-sys", "wasmbind"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"
rfd = { version = "0.8", features = ["file-handle-inner"] }
tonic-web-wasm-client = "0.1"
tracing-wasm = "0.2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm_thread = "0.1"
web-sys = { version = "0.3", features = ["File", "FilePropertyBag", "console"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", features = ["serde"] }
codectrl_log_server = { path = "../codectrl-log-server" }
codectrl-server = { path = "../codectrl-server" }
egui_glow = "0.18"
rfd = "0.8"
tokio = { version = "1.17", default-features = false, features = ["net", "rt-multi-thread", "io-util", "macros"] }

[build-dependencies]
chrono = "0.4"
toml = "0.5"
