[package]
name = "codectrl_log_server"
version = "0.3.0"
edition = "2021"
authors = ["Authentura <contact@authentura.com>", "Samuel Boyden <s.boyden@authentura.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2"
codectrl-protobuf-bindings = { git = "https://github.com/Authentura/codectrl-rust-protobuf-bindings", tag = "v0.7.6" }
log = { version = "0.4", features = ["release_max_level_warn", "max_level_info"]}
serde = "1.0"
serde_json = "1.0"
simple_logger = { version = "1.15", default-features = false, features = ["colors", "threads"]}
tokio = { version = "1.14", default-features = false, features = ["net", "rt-multi-thread", "io-util"] }
