[package]
name = "codectrl-server"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
codectrl-protobuf-bindings = { git = "https://github.com/z9fr/codectrl-rust-protobuf-bindings", tag = "v0.8.0" }
dashmap = { version = "5.3.4", features = ["serde"] }
directories = "4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
futures-core = "0.3"
futures-util = "0.3"
jsonwebtoken = { version = "8.1.1", default-features = false }
log = "0.4.17"
oauth2 = "4.2.3"
parking_lot = "0.12.1"
prost = "0.10"
rand = "0.8.5"
sea-orm = { version = "0.9", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"
tonic = "0.7"
tonic-web = "0.3.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
warp = "0.3.2"

[[bin]]
path = "bin/standalone.rs"
name = "standalone"
