[package]
name = "codectrl-gui"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dark-light = "1.0.0"
iced = { version = "0.9", features = ["tokio", "iced_glow", "default_system_font", "iced_wgpu", "system"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", version = "0.5.2" }
iced_native = "0.10.3"
