[package]
name = "codectrl-gui"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-stream = "0.3.5"
codectrl-protobuf-bindings = { workspace = true }
codectrl-server = { path = "../codectrl-server" }
dark-light = "1.0.0"
iced = { version = "0.9", features = ["tokio", "iced_glow", "default_system_font", "iced_wgpu", "system"] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", version = "0.5.2" }
iced_native = "0.10.3"
parking_lot = { workspace = true }
tokio = { workspace = true}
tokio-stream = { version = "0.1.14", features = ["full"] }
