[package]
name = "codectrl-server"
version.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
codectrl-protobuf-bindings = { git = "https://github.com/Authentura/codectrl-rust-protobuf-bindings", tag = "v0.8.3" }
dashmap = { version = "5.3.4", features = ["serde"] }
directories = "4.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
futures-core = "0.3"
futures-util = "0.3"
jsonwebtoken = { version = "8.1.1", default-features = false }
log = "0.4.17"
oauth2 = "4.2.3"
once_cell = "1.15.0"
parking_lot = "0.12.1"
prost = "0.10"
rand = "0.8.5"
regex = "1.6.0"
sea-orm = { version = "0.9", features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = "0.7"
tonic-web = "0.3.0"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
warp = "0.3.2"

[[bin]]
path = "bin/standalone.rs"
name = "standalone"
