[package]
name = "code_ctrl_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
backtrace = { version = "0.3", optional = true }
tokio = { version = "1.13", optional = true, default-features = false, features = ["net", "rt-multi-thread", "io-util"] }


[features]
default = ["full"]
full = ["backtrace", "tokio"]
types-only = []